sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__xyz_wing__tests__snapshots__base_3_sample_4_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/xyz_wing.rs
description: Strategy XyzWing executed on grid base_3_sample_4_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │   3 ║  23 │  2  │  23 ║     │     │     ║
    - ║  5  │  9  │     ║   6 │     │   6 ║  1  │  4  │  7  ║
    - ║     │     │  8  ║     │  8  │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │ 1   │ 1 3 ║     │ 12  │ 123 ║     │  2  │     ║
    - ║ 4 6 │ 4 6 │ 4   ║  9  │  5  │   6 ║  56 │   6 │  8  ║
    - ║     │     │     ║     │     │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │ 1   │ 1   ║     │     │     ║
    - ║ 4 6 │  7  │  2  ║ 456 │  5  │   6 ║  56 │  3  │  5  ║
    - ║     │     │     ║     │  8  │  8  ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1   │ 1 3 ║     │     │     ║     │     │ 1 3 ║
    - ║  7  │  56 │     ║  56 │  4  │   6 ║  2  │  9  │     ║
    - ║     │     │     ║     │     │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │ 1   │     ║
    - ║ 4   │  2  │ 4   ║  5  │  3  │     ║  8  │     │  6  ║
    - ║   9 │     │   9 ║     │     │   9 ║     │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │  2  ║   3 │     │   3 ║
    - ║  8  │ 4 6 │ 4   ║  1  │  7  │   6 ║ 4   │  5  │ 4   ║
    - ║     │     │   9 ║     │     │   9 ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │     │     ║     │     │     ║   3 │ 1   │     ║
    - ║     │     │  5  ║  7  │  6  │  4  ║     │     │  9  ║
    - ║     │  8  │     ║     │     │     ║     │  8  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │ 12  │     ║     │ 1   │ 1   ║
    - ║ 4   │  3  │  6  ║     │     │  5  ║ 4   │     │ 4   ║
    - ║   9 │     │     ║     │   9 │     ║ 7   │ 78  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │   3 ║   3 │     │     ║
    - ║  1  │ 4   │ 4   ║  8  │     │     ║ 456 │   6 │  2  ║
    - ║     │     │ 7 9 ║     │   9 │   9 ║ 7   │ 7   │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r5c1: delete candidate 4, because of: r4c0: candidates 4,9, r5c2: candidates 3,4,9, r5c6: candidates 3,4"
    - "r5c1: delete candidate 4, because of: r4c0: candidates 4,9, r5c2: candidates 3,4,9, r5c8: candidates 3,4"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │   3 ║  23 │  2  │  23 ║     │     │     ║
    - ║  5  │  9  │     ║   6 │     │   6 ║  1  │  4  │  7  ║
    - ║     │     │  8  ║     │  8  │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │ 1   │ 1 3 ║     │ 12  │ 123 ║     │  2  │     ║
    - ║ 4 6 │ 4 6 │ 4   ║  9  │  5  │   6 ║  56 │   6 │  8  ║
    - ║     │     │     ║     │     │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │ 1   │ 1   ║     │     │     ║
    - ║ 4 6 │  7  │  2  ║ 456 │  5  │   6 ║  56 │  3  │  5  ║
    - ║     │     │     ║     │  8  │  8  ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1   │ 1 3 ║     │     │     ║     │     │ 1 3 ║
    - ║  7  │  56 │     ║  56 │  4  │   6 ║  2  │  9  │     ║
    - ║     │     │     ║     │     │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │ 1   │     ║
    - ║ 4   │  2  │ 4   ║  5  │  3  │     ║  8  │     │  6  ║
    - ║   9 │     │   9 ║     │     │   9 ║     │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │  2  ║   3 │     │   3 ║
    - ║  8  │   6 │ 4   ║  1  │  7  │   6 ║ 4   │  5  │ 4   ║
    - ║     │     │   9 ║     │     │   9 ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │     │     ║     │     │     ║   3 │ 1   │     ║
    - ║     │     │  5  ║  7  │  6  │  4  ║     │     │  9  ║
    - ║     │  8  │     ║     │     │     ║     │  8  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │ 12  │     ║     │ 1   │ 1   ║
    - ║ 4   │  3  │  6  ║     │     │  5  ║ 4   │     │ 4   ║
    - ║   9 │     │     ║     │   9 │     ║ 7   │ 78  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │   3 ║   3 │     │     ║
    - ║  1  │ 4   │ 4   ║  8  │     │     ║ 456 │   6 │  2  ║
    - ║     │     │ 7 9 ║     │   9 │   9 ║ 7   │ 7   │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 4
          column: 0
        candidates:
          - 4
          - 9
      - position:
          row: 5
          column: 2
        candidates:
          - 3
          - 4
          - 9
      - position:
          row: 5
          column: 6
        candidates:
          - 3
          - 4
    actions:
      - position:
          row: 5
          column: 1
        deleteCandidates:
          - 4
  - reasons:
      - position:
          row: 4
          column: 0
        candidates:
          - 4
          - 9
      - position:
          row: 5
          column: 2
        candidates:
          - 3
          - 4
          - 9
      - position:
          row: 5
          column: 8
        candidates:
          - 3
          - 4
    actions:
      - position:
          row: 5
          column: 1
        deleteCandidates:
          - 4
